# Rapid

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
Editor/Application/: CMakeLists.txt  Main.cpp
Editor/Application/Fonts/a-atomic-md-font/: info.txt
Editor/Application/Fonts/azonix-font/: info.txt
Editor/Application/Fonts/josefin-sans-font/: info.txt
Editor/Application/Fonts/rawengulk-font/: info.txt
Editor/Application/Fonts/rawengulk-font/misc/: OFL_FAQ-c00a.txt  OFL_License-1872.txt
Editor/Application/Fonts/salma-alfasans-font/: info.txt
Editor/Application/Fonts/salma-alfasans-font/misc/: README.txt
Editor/Application/Fonts/simvoni-font/: info.txt
Editor/Application/Fonts/swansea-font/: info.txt
Editor/Application/Fonts/swansea-font/misc/: SWANSEBI-9e01.txt  SWANSE_B-fa23.txt  SWANSE_I-f20e.txt  SWANSE__-392e.txt
Editor/Application/Shaders/: UI.frag
Editor/Application/Source/: Application.cpp  Application.hpp
Editor/Application/Themes/: Default.json
Editor/Application/Themes/Default/: Default.json
Editor/Backend/: BackendObject.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.hpp  CommandBufferAllocator.cpp  CommandBufferAllocator.hpp  Dummy.cpp  GraphicsEngine.cpp  GraphicsEngine.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  ImGuiNode.cpp  ImGuiNode.hpp  Image.cpp  Image.hpp  ProcessingNode.hpp  Queue.cpp  Queue.hpp  ShaderCode.cpp  ShaderCode.hpp  ShaderResource.cpp  ShaderResource.hpp  Utility.cpp  Utility.hpp  Window.cpp  Window.hpp
Editor/Core/: CMakeLists.txt  Limiter.cpp  Limiter.hpp  UndoStack.cpp  UndoStack.hpp
Editor/Frontend/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.hpp  CodeView.hpp  Console.cpp  Defaults.hpp  FileExplorer.cpp  Function.cpp  Function.hpp  Globals.cpp  Globals.hpp  MenuBar.cpp  NodeEditor.cpp  NodeEditor.hpp  NodeSpawner.cpp  Object.cpp  Object.hpp  UIComponent.hpp  Variable.hpp
Editor/Frontend/Components/: CodeView.cpp  Console.cpp  Console.hpp  FileExplorer.hpp  Function.cpp  Function.hpp  MenuBar.cpp  MenuBar.hpp  NodeEditor.cpp  NodeEditor.hpp  NodeSpawner.hpp  Object.hpp
Editor/Frontend/Components/Utility/: ThemeParser.cpp  ThemeParser.hpp
Editor/Frontend/Utility/: CloseEvent.hpp  ThemeParser.cpp
Runtime/: README.md
Runtime/Template/: README.md
